--- a/demo-server/pom.xml
+++ b/demo-server/pom.xml
@@ -23,6 +23,10 @@
             <artifactId>fancy-toolkit</artifactId>
             <version>2.0.0</version>
         </dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-thymeleaf</artifactId>
+        </dependency>
     </dependencies>
 
     <build>
