--- a/demo-server/pom.xml
+++ b/demo-server/pom.xml
@@ -15,13 +15,14 @@
 
     <dependencies>
         <dependency>
+            <groupId>fan</groupId>
+            <artifactId>fancy-resource-server-starter</artifactId>
+            <version>1.0.0</version>
+        </dependency>
+
+        <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-oauth2-authorization-server</artifactId>
-        </dependency>
-        <dependency>
-            <groupId>fan</groupId>
-            <artifactId>fancy-toolkit</artifactId>
-            <version>2.0.0</version>
         </dependency>
         <dependency>
             <groupId>org.springframework.boot</groupId>
