--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
     <parent>
         <groupId>fan</groupId>
         <artifactId>fancy-parent</artifactId>
-        <version>4.0.1</version>
+        <version>4.0.2</version>
     </parent>
     <artifactId>demo</artifactId>
     <version>1.0.0</version>
@@ -18,5 +18,6 @@
         <module>demo-server</module>
         <module>demo-client</module>
         <module>demo-resource</module>
+        <module>demo-gateway</module>
     </modules>
 </project>
